--- a/css/georef.css
+++ b/css/georef.css
@@ -81,7 +81,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 	border:1px solid blue;
 	height:100%;
 	width:100%;
-	cursor:crosshair;	
+	/*cursor:crosshair;	*/
 }
 /* ------------------------------------------------ */
 /* Fourth window partition */
@@ -118,7 +118,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 	border: 1px solid blue;
 	height: 95%;
 	width: 100%;
-	cursor:crosshair;
+	/*cursor:crosshair;*/
 }
 
 
