--- a/css/georef.css
+++ b/css/georef.css
@@ -44,15 +44,15 @@ as published by Sam Hocevar. See the COPYING file for more details.
  ------------------------------------------------ */
 #top-left{ 
 	float: left; 
-	width: 25%;
+	width: 10%;
 }
 #top-center{ 
 	float: left; 
-	width: 50%;
+	width: 80%;
 }
 #top-right{ 
 	float: left; 
-	width: 25%;
+	width: 10%;
 }
 
 #middle-left{
@@ -71,14 +71,28 @@ as published by Sam Hocevar. See the COPYING file for more details.
 	height: 100%;
 }
 
-
+#bottom-left{ 
+	float: left; 
+	width: 25%;
+}
+#bottom-center{ 
+	float: left; 
+	width: 50%;
+}
+#bottom-right{ 
+	float: left; 
+	width: 25%;
+}
 /* ------------------------------------------------ 
 3rd window partition 
  ------------------------------------------------ */
- #tabs{
+
+
+
+#tabs{
 	height: 100%;
 }
- 
+
  /* ------------------------------------------------ 
 4th window partition 
  ------------------------------------------------ */
