Added button to display SPARQL UPDATE query

--- a/css/georef.css
+++ b/css/georef.css
@@ -37,6 +37,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 }
 #bottom{
 	height: 10%;
+	width:100%;
 }
 
 /* ------------------------------------------------ 
